out/old/manifests/security-cloud/Deployment.cloud-security-load.yaml
metadata:
  name: cloud-security-load
  namespace: security-cloud
  annotations: {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <COMPANY>-sre-spl
  template:
    metadata:
      labels:
        app: <COMPANY>-sre-spl
    spec:
      volumes:
      - name: log
        hostPath:
          path: /cloud-security-load/log
          type: ''
      containers:
      - name: cloud-security-load
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/cloud-security-load/prd:26
        resources: {}
        volumeMounts:
        - name: log
          mountPath: /app/spl/log
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: secret-registry-image
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
apiVersion: apps/v1
kind: Deployment
