out/old/manifests/security-cloud/Service.sec-mongodb-service.yaml
metadata:
  name: sec-mongodb-service
  namespace: security-cloud
spec:
  ports:
  - name: sec-mongo
    protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: sec-dashboard-mongo
  clusterIP: <IP_104>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
