out/old/manifests/security-cloud/Ingress.sec-dashboard-ingress.yaml
metadata:
  name: sec-dashboard-ingress
  namespace: security-cloud
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"security-cloud:dsd-service","ingressName":"security-cloud:sec-dashboard-ingress","hostname":"security-dashboard.<COMPANY><DOMAIN_14>","path":"/","allNodes":false}]'
spec:
  ingressClassName: nginx
  rules:
  - host: security-dashboard.<COMPANY><DOMAIN_14>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dsd-service
            port:
              number: 8080
apiVersion: <DOMAIN_775>/v1
kind: Ingress
